tinyc/test/bad/void-as-bool-and-r.c
void v() {}

int main()
{
    true && v();
    return 0;
}
